// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchContainer page component it renders correctly when connected to the store 1`] = `
<ContextProvider
  value={null}
>
  <SearchContainer
    displayCount={0}
    fetchFilms={[Function]}
    films={Array []}
    filmsError={null}
    foundCount={0}
    isFetching={false}
    search=""
    searchBy="title"
    setSearchParams={[Function]}
    sortBy="release_date"
    store={
      Object {
        "close": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "runSaga": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
  />
</ContextProvider>
`;

exports[`SearchContainer page component it renders correctly when films are provided 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Movie Search
    </title>
  </HelmetWrapper>
  <Header>
    <div
      className="padding-controls"
    >
      <SiteName />
      <SearchForm
        onSearchChange={[Function]}
        search=""
        searchBy="title"
      />
    </div>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <LoadableComponent
        displayCount={15}
        films={
          Array [
            Object {
              "genres": Array [
                "some genre",
                "another genre",
              ],
              "id": 1,
              "overview": "Film overview",
              "poster_path": "https://picsum.photos/g/300/450/?random",
              "release_date": "2018-05-04",
              "title": "Film title",
              "vote_average": 7.5,
            },
          ]
        }
        foundCount={1}
        onSortByChange={[Function]}
        sortBy="release_date"
      />
    </LoadingBlock>
  </main>
  <Footer />
</Fragment>
`;

exports[`SearchContainer page component it renders correctly when no films found 1`] = `
<Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Movie Search
    </title>
  </HelmetWrapper>
  <Header>
    <div
      className="padding-controls"
    >
      <SiteName />
      <SearchForm
        onSearchChange={[Function]}
        search=""
        searchBy="title"
      />
    </div>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <LoadableComponent
        className="font-size-header font-bold color-alt"
      >
        No movies found
      </LoadableComponent>
    </LoadingBlock>
  </main>
  <Footer />
</Fragment>
`;
